--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "scripts": {},
   "peerDependencies": {
-    "eslint-plugin-hapi": "2.x.x",
+    "eslint-plugin-hapi": "x.x.x",
     "eslint-plugin-standard": "1.x.x"
   },
   "devDependencies": {},
