--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "eslint-config-seneca",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "ESLint config for seneca",
-  "author": "Wyatt Preul",
   "main": "lib/index.js",
+  "license": "MIT",
+  "author": "Wyatt Preul",
+  "contributors": [
+    "Dean McDonnell (https://github.com/mcdonnelldean)"
+  ],
+
   "homepage": "https://github.com/senecajs/eslint-config-seneca",
   "repository": {
     "type": "git",
